testcases/hereiam/negative/login_neg_TC13.sah
_setValue(_textbox("userId"), "db123");
_setValue(_password("password"), "hello");
_click(_div("LOGIN"));
_assert(_isVisible(_div("Login Failed. 
